--- a/MovieApp/Xibs/MovieCell.xib
+++ b/MovieApp/Xibs/MovieCell.xib
@@ -18,19 +18,19 @@
                 <rect key="frame" x="0.0" y="0.0" width="461" height="233"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="beatiful" translatesAutoresizingMaskIntoConstraints="NO" id="ZW0-s1-4QV">
-                        <rect key="frame" x="5" y="5" width="180" height="180"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="ZW0-s1-4QV">
+                        <rect key="frame" x="5" y="5" width="170" height="170"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="ZW0-s1-4QV" secondAttribute="height" multiplier="1:1" id="9Wc-db-Kdb"/>
-                            <constraint firstAttribute="width" constant="180" id="Ukn-4F-L9O"/>
-                            <constraint firstAttribute="height" constant="180" id="trI-hM-t3a"/>
+                            <constraint firstAttribute="width" constant="170" id="Ukn-4F-L9O"/>
+                            <constraint firstAttribute="height" constant="170" id="trI-hM-t3a"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="rny-5u-ZFS">
-                        <rect key="frame" x="193" y="2" width="266" height="186"/>
+                        <rect key="frame" x="183" y="2" width="276" height="176"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inside Out" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="XK0-0j-JZA">
-                                <rect key="frame" x="0.0" y="0.0" width="266" height="90"/>
+                                <rect key="frame" x="0.0" y="0.0" width="276" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="oR7-zD-Z7b"/>
                                 </constraints>
@@ -39,7 +39,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Animation, Adventure, Comedy" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="H3y-y4-g0E">
-                                <rect key="frame" x="0.0" y="95" width="266" height="60"/>
+                                <rect key="frame" x="0.0" y="95" width="276" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="8Uh-B2-LCF"/>
                                 </constraints>
@@ -48,16 +48,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Jjp-Zm-41H">
-                                <rect key="frame" x="0.0" y="153" width="266" height="33"/>
+                                <rect key="frame" x="0.0" y="143" width="276" height="33"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wmx-wy-mMD">
-                                        <rect key="frame" x="0.0" y="0.0" width="228" height="33"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="238" height="33"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8.2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lxS-gQ-2VB">
-                                        <rect key="frame" x="233" y="0.0" width="33" height="33"/>
+                                        <rect key="frame" x="243" y="0.0" width="33" height="33"/>
                                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="33" id="3z3-uC-RGH"/>
@@ -101,7 +101,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="beatiful" width="960" height="540"/>
+        <image name="placeholder" width="500" height="375"/>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
